--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,21 @@ body {
 .container {
    border: 2px solid rebeccapurple;
    /* display: flex; */
-   /* width: 640px;
-   height: 640px; */
+   width: 75%;
+   height: 90%;
+   margin: auto;
 }
 
 .level1 {
-   border: 2px solid rgb(17, 17, 194);
-   width: 640px;
-   height: 640px;
-   display: flex;
-   flex-wrap: wrap;
+   padding: 30px;
    margin: auto;
+   width: 80%;
+   height: 80%;
+   /* width: 640px;
+   height: 640px; */
+   border: 2px solid rgb(17, 17, 194);   
+   display: flex;
+   flex-wrap: wrap;   
    perspective: 1000px;
 }
 
@@ -33,6 +37,7 @@ body {
 
 .card {
    border: 2px solid rgb(201, 80, 43);
+   margin: auto;
    width: 25%;
    height: 33.333%;
    position: relative;
