--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,97 @@
-* {
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
-}
-
 body {
-   height: 100vh;
-   display: flex;
-   background: #BADA55;
+   background-image: url("https://wallpapercave.com/wp/aP75xr3.jpg") ;
 }
 
-.container {
-   border: 2px solid rebeccapurple;
-   /* display: flex; */
-   width: 75%;
-   height: 90%;
+h1 {
+   text-align: center;
+   color: whitesmoke;
+   font-size: 50px;
+   font-family: fantasy;
+   
+}
+
+.winner {
+   display: none;
    margin: auto;
+   position: relative;
 }
 
-.level1 {
-   padding: 30px;
-   margin: auto;
-   width: 80%;
-   height: 80%;
-   /* width: 640px;
-   height: 640px; */
-   border: 2px solid rgb(17, 17, 194);   
-   display: flex;
-   flex-wrap: wrap;   
-   perspective: 1000px;
+.deck {
+   text-align: center;
 }
-
-/* .level2 {
-   border: 2px solid rgb(211, 20, 173); 
-} */
 
 .card {
-   border: 2px solid rgb(201, 80, 43);
-   margin: auto;
-   width: 25%;
-   height: 33.333%;
-   position: relative;
-   transform-style: preserve-3d;
-   transition: transform .5s;
-}
-
-/* .card:hover {
-   opacity: 50%;
-} */
-
-.card.rotate {
-   transform: rotateY(180deg);
-
-}
-
-.main, .back {
-   width: 100%;
-   height: 100%;
-   padding: 20px;
-   border: 2px solid rgb(146, 157, 25);
-   position: absolute;
-   backface-visibility: hidden;
-}
-
-.main {
-   transform: rotateY(180deg);
-}
-
-/* img {
+   display: inline-block;
+   border:1px solid rgb(0, 0, 0);
+   border-radius: 5px;
    width: 100px;
+   height: 100px;
+   background-color: #BADA55;
+   cursor: pointer;
+}
+.card.done {
+   cursor: default;
+   
+}
 
-} */
+.card.done:hover {
+   cursor: default;
+   opacity: 100%;
+}
 
+.card:hover {
+   opacity: 50%;
+
+}
+
+.red {
+   background-color: red;
+
+}
+
+.blue {
+   background-color: blue;
+}
+
+.green {
+   background-color: green;
+}
+
+.yellow {
+   background-color: yellow;
+}
+
+.pink {
+   background-color: pink;
+}
+
+.orange {
+   background-color: orange;
+}
+
+.black {
+   background-color: black;
+}
+
+.purple {
+   background-color: purple;
+}
+
+.color {
+   background-color: #BADA55;
+}
+
+button {
+   font-family: monospace;
+   text-transform:uppercase;
+   font-size: medium;
+   background:#555;
+   border:1px solid rgb(0, 0, 0);
+   border-radius: 5px;
+   padding:20px 20px;
+   color:rgb(203, 19, 19);
+   cursor:pointer;
+}
 
 
 
